@@ -1,21 +1,23 @@
 package com.example.Library.Shop.service;
 
 import com.example.Library.Shop.model.Users;
+import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
+@Getter
 @RequiredArgsConstructor
 public class MyUser implements UserDetails {
 private final Users user;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(user.getRole()));
+        return Collections.singletonList(new SimpleGrantedAuthority(user.getRole()));
     }
 
     @Override
@@ -27,4 +29,5 @@ private final Users user;
     public String getUsername() {
         return user.getUsername();
     }
+
 }
